js: fix css styles and wrap buttons in div

--- a/src/jq-autocomplete.css
+++ b/src/jq-autocomplete.css
@@ -22,8 +22,20 @@
   margin: 0;
 }
 
-.jq-autocomplete-create-form input {
+.jq-autocomplete-create-form label {
+  margin: 1px 0;
+}
+
+.jq-autocomplete-create-form-buttons {
+  margin: 5px 0;
+  text-align: center;
+}
+
+.jq-autocomplete-create-form input,
+.jq-autocomplete-create-form select {
   padding: 0;
+  margin: 0;
+  height: auto;
 }
 
 .jq-autocomplete-create-form button {
